<resources>
    <string name="app_name">HeroEventBus</string>
    <string name="age_22">22</string>
    <string name="name_libai">李白</string>
    <string name="card_cike">刺客</string>
    <string name="edit_other">更换英雄</string>
    <string name="hero_name">英雄姓名：</string>
    <string name="hero_type">英雄类型：</string>
    <string name="hero_age">英雄年龄：</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="return_look">返回查看</string>


    <!--类别-->
    <string name="assassin">刺客</string>
    <string name="mage">法师</string>
    <string name="warrior">战士</string>
    <string name="shooter">射手</string>
    <string name="tank">坦克</string>
    <string name="assist">辅助</string>
</resources>
